# dx_chat_entropy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BL EDits Entropy and KL Divergence Calculations based on Grouped Probabilities.xlsx  CITATION.cff  CLAUDE.md  CONTINUITY.md  CONTRIBUTING.md  CREST syndrome_vs_Achalasia (type 1).xlsx  CREST syndrome_vs_Anxiety.xlsx  CREST syndrome_vs_Arrhythmia.xlsx  CREST syndrome_vs_Cardiac: ACS.xlsx  CREST syndrome_vs_Eosinophilic esophagitis.xlsx  CREST syndrome_vs_Esophageal adenocarcinoma.xlsx  CREST syndrome_vs_Esophageal squamous cell carcinoma.xlsx  CREST syndrome_vs_Esophageal stricture.xlsx  CREST syndrome_vs_Food impaction.xlsx  CREST syndrome_vs_GERD.xlsx  CREST syndrome_vs_Gastroparesis.xlsx  CREST syndrome_vs_MCTD.xlsx  CREST syndrome_vs_Musculoskeletal chest pain.xlsx  CREST syndrome_vs_Pericarditis.xlsx  CREST syndrome_vs_Pill esophagitis.xlsx  CREST syndrome_vs_RA.xlsx  CREST syndrome_vs_Sarcoidosis.xlsx  CREST syndrome_vs_Scleroderma.xlsx  CREST syndrome_vs_Zenker's diverticulum.xlsx  ChatBot Team Members & Roles.md  Chest pain - Carter - 18 Categories - LR matrix.xlsx  Entropy and KL Divergence Calculations based on Grouped Probabilities - need help with Log 2 in excel.xlsx  Erectile Dysfunction - Torres - 7 Categories - LR matrix.xlsx  Key Features for ChatBot API Entropy Calculations Across an Interview.xlsx  LR estimator.txt  Makefile  README.md  display_reasoning.html  display_reasoning.ipynb  extract_features.ipynb  extract_nnt_lrs.ipynb  feedback_generator.ipynb  (+10 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
Assessments/: answers_Intermtn MS4 1 Transcript.xlsx  answers_Intermtn MS4 2 Transcript.xlsx  answers_transcript FM PGY1.xlsx  asssessment_template_new.xlsx  completed_lrs.xlsx  estimate_lrs.ipynb
archive/: lr_estimator_single_disease.py
config/: config.example.yaml  lr_differential_scenarios.yaml
data/: Chest pain - Carter - 8 Categories - LR matrix.xlsx  Erectile Dysfunction - Torres - 7 Categories - LR matrix.xlsx  Metrorrhagia - Sperle - 9 Categories - LR matrix.xlsx
data_jul_21_2025/: LRs for 87 features within GI ddx - base data and scheme.xlsx  LRs for 87 features within GI ddx - dysphagia vs esophageal pain without dysphagia_filled.xlsx  columns_to_plot.xlsx  gpt_5 LRs for 87 features within esoph dysmotility non-progressive dysphgia ddx - w or wo autoimmune_filled.xlsx  gpt_5 LRs for 87 features within esophageal dysphagia ddx - nonprogressive vs progressive_filled.xlsx
docs/: AI_ASSISTED_CODING.md  CLAUDE_WORKFLOW.md  CODEX_WORKFLOW.md  CONTINUITY_ARCHIVE.md  DATA_MANAGEMENT.md  DECISIONS.md  PIPELINES.md  TODO.md  (+2 more)
(+984 files in other folders)
