[project]
name = "dx-chat-entropy"
version = "0.1.0"
description = "Clinical reasoning entropy analysis with reproducible scientific Python workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Brian Locke"},
]
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.15.1",
  "pre-commit>=3.7",
]
notebooks = [
  "anthropic>=0.84",
  "arviz>=0.23",
  "bambi>=0.17",
  "beautifulsoup4>=4.14",
  "huggingface-hub>=1.5",
  "ipykernel>=7.2",
  "ipython>=9.10",
  "ipywidgets>=8.1",
  "llm>=0.28",
  "markitdown>=0.1.5",
  "matplotlib>=3.10",
  "mostlyai>=5.10",
  "openai>=2.24",
  "openpyxl>=3.1",
  "peft>=0.18",
  "pingouin>=0.6",
  "pyarrow>=23.0",
  "pydantic>=2.12",
  "pypdf>=6.7",
  "pystata>=0.0.1",
  "python-dotenv>=1.2",
  "requests>=2.32",
  "safetensors>=0.7",
  "scienceplots>=2.2",
  "scipy>=1.17",
  "sentence-transformers>=5.2",
  "skimpy>=0.0.20",
  "srsly>=2.5",
  "statadict>=1.1",
  "statsmodels>=0.14",
  "tabulate>=0.9",
  "tiktoken>=0.12",
  "torch>=2.10",
  "transformers>=5.2",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-q"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["dx_chat_entropy"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
